# desktop-tutorial

./: Untitled.ipynb  blank_notebook.ipynb  new_note.ipynb  test.ipynb
VST3ReverbPlugin/: CMakeLists.txt  README.md
VST3ReverbPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
